--- a/server/boot/2.sample-plans.js.org
+++ b/server/boot/2.sample-plans.js.org
@@ -3,7 +3,6 @@
  * Created by kimjin-young on 2015. 6. 2..
  */
 
-/*
 module.exports = function(app) {
 
     // checking no subscriber
@@ -20,6 +19,15 @@ module.exports = function(app) {
 
       var count = plans.length;
 
+      plans.forEach(function(plan){
+        app.models.Plan.create(plan, function(err,instance) {
+          if(err) return console.log(err);
+        });
+
+      });
+
+
+      /*
       plans.forEach(function(plan){
         app.models.Plan.create(plan, function(err,instance){
           if(err) return console.log(err);
@@ -49,8 +57,8 @@ module.exports = function(app) {
         });
 
       });
+      */
 
     });
 }
-*/
 
